turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: value avance is not a member of Unit
    case Color.black => setCouleurBrosse(Color.white);baisseBrosse();leveBrosse();gauche()avance()
                                                                                          ^